management/univention-management-console-frontend/css/umc-modifications.less
/* ... */
.dijitTimeTextBox {
	width: 8em!important; /*set hard value for umc/widgets/TimeBox; Bug #29789*/
}

.dijitInputInner {
	-webkit-appearance: none;
}

.dijitSpinner .dijitSpinnerButtonContainer,
.dijitComboBox .dijitArrowButtonContainer {
	border-width: inherit; /* DEL */
}

/* 'body' wurde upstream auch  */
.dijitAlignTop,
.dijitAlignBottom,
.dijitAlignLeft,
.dijitAlignRight {
	overflow: inherit; /* DEL */
}

.dijitTabContainerBottom-container,
.dijitTabContainerTop-container,
.dijitTabContainerLeft-container,
.dijitTabContainerRight-container {
	border: inherit; /* DEL */
}


.dijitTab .tabLabel {
	font-size: 1.166em;
}

.dijitStackContainer-child {
	 border: inherit; /* DEL */
}

/* @end */

.umc .dijitContentPane {
	padding: 0; /* remove upstream padding which was new in dojo 1.8 */
}

.umc .dijitContentPaneLoading {
  background: url(images/loadingAnimation.gif) no-repeat left center;
  padding-left: 25px;
}

.umc .dijitContentPaneError {
  background: url(../../icons/images/commonIconsObjActEnabled.png) no-repeat left center;
}

.umc .dojoDndItem {
	.transition-duration(.0s);
}

.umc .dijitTextBoxError .dijitValidationContainer {
  height: 1.833em;
}

.umc .dijitTextBox .dijitInputInner,
.umc .umcComboBox .dijitInputInner {
  padding: 0.3em 0.25em 0.3em 0.25em !important;
}

.umc .dijitTextBox {
	margin-bottom: 10px;
}

.umc .umcLabelPaneCheckBox {
	margin-bottom: 10px;
}

.umc .umcLabelPaneCheckBoxBetweenNonCheckBoxes {
	margin-top: 2em;
}

.umc .umcLabelPaneCheckBox .umcLabelPaneLabeNodeRight {
	display: inline-block;
	padding-left: 0.416em;
}

.umc .umcLabelPaneCheckBox label {
	position: relative;
	top: 2px;
}

.umc .dijitTextBoxError .dijitButtonNode {
  border-color: inherit; /* DEL */
}

.umc .dijitTextBoxFocused {
  /* background-image: url(/form/images/textBox_back.png); */
  outline: auto 5px -webkit-focus-ring-color;
}

.umc .dijitDropDownButton .dijitArrowButtonInner {
  background-image: url(form/images/umcHostInfoArrows.png);
}

.umc .dijitComboBox .dijitArrowButtonInner {
  background-position: -33px 53%;
  width: 21px;
  height: 1.8em !important;
  border: 0 none;
}

.umc .dijitComboBox .dijitButtonNode {
  background-image: url(form/images/formHighlight.png);
}

.umc .dijitComboBox .dijitHasDropDownOpen {
  background-position: 100% 0%; /* DEL */
  padding: 0; /* DEL */
}

.umc .dijitComboBox .dijitHasDropDownOpen .dijitArrowButtonInner {
  background-position: -68px 53%; /* DEL */
  border: 0 none; /*DEL*/
}

.umc .dijitComboBoxOpenOnClickHover .dijitArrowButtonInner,
.umc .dijitComboBox .dijitDownArrowButtonHover .dijitArrowButtonInner {
  background-position: -68px 53%;
}

.umc .dijitComboBoxDisabled .dijitArrowButtonInner {
  background-position: 2px 50%!important;
}
.umc .dijitDropDownButtonDisabled .dijitArrowButtonInner {
  background-position: -151px 50%!important;
}
.dj_borderbox .umc .dijitComboBox .dijitHasDropDownOpen .dijitArrowButtonInner {
  width: 21px; /* DEL */
}

.dj_borderbox .umc .dijitComboBoxFocused .dijitHasDropDownOpen .dijitArrowButtonInner {
  width: 21px; /* DEL */
}

/* remove the upstream node completely */
.umc .dijitButton .dijitButtonNode,
.umc .dijitDropDownButton .dijitButtonNode,
.umc .dijitComboButton .dijitButtonNode,
.umc .dijitToggleButton .dijitButtonNode {
  color: inherit;
  border: 0 none; /* DEL */
  padding: inherit; /* DEL */
  background-image: none; /* DEL */
  background-position: inherit; /* DEL */
  background-color: transparent; /* important: make normal buttons transparent */
  .border-radius(0); /* DEL */
  .box-shadow(none); /* DEL */
}

/* fonts and paddings are treated in firefox differently it seems */
/* ... this adjustment makes sure that feels similar */
.has-mozilla .umc {
	.dijitToggleButton,
	.dijitButton,
	.dijitDropDownButton,
	.dijitComboButton {
		padding: 0 0.2em 0.1em 0.2em;
	}
}

.umc .dijitToggleButton,
.umc .dijitButton,
.umc .dijitDropDownButton,
.umc .dijitComboButton {
  //color: white;
  font-size: 1.15em;
  padding: 0.075em 0.25em 0.125em 0.25em;
  background-image: url(form/images/buttonDefault.png);
  background-repeat: repeat-x;
  // resize the button image to fit the font-size
  background-size: cover;
  margin: 0.1em 0.8em 0 0;
  border: 1px solid #d6d6d6;
}

.umc .umcSubmitButton {
  color: white;
  background-image: url(form/images/button.png);
  background-color: @greenMantis;
  border: 1px solid #86b968;
}

/* make sure that last buttons in a container do not have right margins */
.umc .dijitButton:last-child {
  margin-right: 0;
}

/* Buttons should have margins within LabelPanes, though */
.umc .umcLabelPane {
	.dijitButton:last-child {
		margin-right: 0.8em;
	}
}

.umc .dijitDownArrowButton .dijitButtonText {
	display: inline-block;
}

/* shadow effect for hovered button */
.umc .dijitButtonHover,
.umc .dijitButtonHover,
.umc .dijitDropDownButtonHover,
.umc .dijitComboButtonHover {
  .box-shadow(1px 2px 2px rgba(0, 0, 0, 0.1));
}

.umc .dijitButtonHover .dijitButtonNode,
.umc .dijitDropDownButtonHover .dijitButtonNode,
.umc .dijitComboButton .dijitButtonNodeHover,
.umc .dijitComboButton .dijitDownArrowButtonHover,
.umc .dijitToggleButtonHover .dijitButtonNode {
  background-color: inherit; /* DEL */
  color: inherit; /* DEL */
  text-shadow: 1px 1px 0 rgba(0,0,0,0.2);
}

.umc .dijitButtonActive .dijitButtonNode,
.umc .dijitDropDownButtonActive .dijitButtonNode,
.umc .dijitComboButtonActive .dijitButtonNode,
.umc .dijitToggleButtonActive .dijitButtonNode {
  background-color: inherit; /* DEL */
  .box-shadow(inherit); /* DEL */
  .transition-duration(inherit); /* DEL */
}


/* disabled submit buttons should have grey background with dark grey font color */
.umc .dijitButtonDisabled.umcSubmitButton {
	//background-color: @grayAthens;
	//border: solid 1px @grayAlto;
	color: @gray;
	background-color: @greenZanah;
}
/* ... */

